<resources>
    <string name="app_name">WTFIndexer for Android</string>
    <string name="action_settings">Settings</string>
    <string name="WTFIndexerURL">WTFIndexer URL</string>
    <string name="Search">Search</string>
    <string name="favoritesOnly">Favorites Only</string>string>
    <string name="updateEpisodes">Update Episodes</string>string>
    <string name="save">Save</string>string>
    <string name="goBack">Go Back</string>string>
    <string name="darkMode">Dark Mode</string>string>
    <string name="checkedIn">Checked In</string>string>
    <string name="checkedOut">Checked Out</string>string>
    <string name="favorite">Favorite</string>string>
    <string name="Unfavorite">Unfavorite</string>string>
</resources>
