<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SettingsActivity"
    >

    <TextView
         android:id="@+id/TitleBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:height="50dp"
         android:background="@color/colorPrimary"
         android:text="@string/app_name"
         android:textColor="@android:color/white"
         android:textSize="22sp"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
         android:id="@+id/URLLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:text="@string/WTFIndexerURL"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/TitleBar"
    />

    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/URL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="@id/URLLabel"
         app:layout_constraintTop_toBottomOf="@id/TitleBar"
         android:layout_marginStart="120dp"
    >

    <com.google.android.material.textfield.TextInputEditText
         android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:inputType="text|textUri"
         android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
         android:id="@+id/switchDarkMode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/darkMode"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/TitleBar"
         android:layout_marginTop="100dp"
         android:switchPadding = "15dp"
         android:onClick="darkModeClick"
    />

    <Button
         android:id="@+id/saveButton"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/holo_blue_dark"
         android:onClick="saveClick"
         android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/goBackButton"
         android:layout_marginStart="25dp"
         android:layout_marginBottom="20dp"
    />

    <Button
         android:id="@+id/goBackButton"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/darker_gray"
         android:onClick="goBackClick"
         android:text="@string/goBack"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginBottom="20dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
